# pylontech-console

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
captures/: README.md
captures/US2000C/B67.5.0/: bat-1.txt  bat-2.txt  bat-3.txt  bat-4.txt  bat-5.txt  ci.txt  getpwr.txt  help.txt  info-2.txt  info.txt  pwr-1-charge.txt  pwr-1.txt  pwr-2-charge-event.txt  pwr-2.txt  pwr-3.txt  pwr-4.txt  pwr-5.txt  pwr.txt  pwrsys.txt  stat.txt  time.txt
docs/: README.md  capture-plan.md  wiring.md
docs/architecture/: adr-001-module-identity-and-position.md  adr-002-technology-stack.md  dependency-rules.md  layers.md  project-structure.md
docs/contracts/: rest-api-v0.1.md  version-0.1.md
docs/development/: implementation-plan-v0.1.md
docs/testing/: test-strategy-v0.1.md
examples/: README.md
protocol/: README.md  bat.md  ci.md  getpwr.md  help.md  info.md  pwr.md  pwrsys.md  read-only-commands.md  stat.md  time.md
src/pylontech_console/: commands.py  config.py  main.py  polling.py
src/pylontech_console/discovery/: __init__.py  modules.py
src/pylontech_console/domain/: __init__.py  current_state.py  discovery.py  info.py  process.py  pwr.py
src/pylontech_console/framing/: console.py
src/pylontech_console/parsers/: __init__.py  bat.py  common.py  info.py  pwr.py  pwr_detail.py  pwrsys.py
src/pylontech_console/transport/: tcp.py
tests/integration/: test_console_exchange.py  test_tcp_transport.py
tests/unit/: test_commands.py  test_config.py  test_polling.py  test_smoke.py
tests/unit/discovery/: test_modules.py
(+5 files in other folders)
