[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylontech-console"
version = "0.0.0"
description = "Pylontech Console reference implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
